--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ sudo: false
 language: node_js
 node_js: "8"
 
+addons:
+  apt:
+    packages:
+      - lynx
+
 os:
   - linux
   - osx
@@ -20,6 +25,7 @@ before_install:
   - ls ../
   - ls
   - printf Y\n | electron-forge import .
+  - lynx -dump ../
 
 install:
   - electron-forge package
