--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,6 @@ sudo: false
 language: node_js
 node_js: "8"
 
-addons:
-  apt:
-    packages:
-      - lynx
-
 os:
   - linux
   - osx
@@ -25,7 +20,7 @@ before_install:
   - ls ../
   - ls
   - printf Y\n | electron-forge import .
-  - lynx -dump ../
+  - tree
 
 install:
   - electron-forge package
