--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "projectk-electron",
-    "productName": "projectk-electron",
+    "name": "projects-electron",
+    "productName": "projects-electron",
     "version": "0.01-DEV",
-    "description": "ProjectK, made with Electron!",
+    "description": "ProjectS, made with Electron!",
     "main": "src/main.js",
     "scripts": {
         "start": "electron-forge start",
@@ -32,7 +32,7 @@
                 "packageManager": "npm"
             },
             "electronWinstallerConfig": {
-                "name": "projectk_electron"
+                "name": "projects_electron"
             },
             "electronInstallerDebian": {},
             "electronInstallerRedhat": {},
@@ -42,7 +42,7 @@
             },
             "windowsStoreConfig": {
                 "packageName": "",
-                "name": "projectkelectron"
+                "name": "projectselectron"
             }
         }
     },
