--- a/package.json
+++ b/package.json
@@ -1,70 +1,60 @@
 {
-    "name": "projects-electron",
-    "productName": "projects-electron",
-    "version": "0.01-DEV",
-    "description": "ProjectS, made with Electron!",
-    "main": "src/main.js",
-    "scripts": {
-        "start": "electron-forge start",
-        "package": "electron-forge package",
-        "make": "electron-forge make",
-        "publish": "electron-forge publish",
-        "lint": "eslint src --color"
-    },
-    "keywords": [],
-    "author": "jasoryeh",
-    "license": "MIT",
-    "config": {
-        "forge": {
-            "make_targets": {
-                "win32": [
-                    "squirrel"
-                ],
-                "darwin": [
-                    "zip"
-                ],
-                "linux": [
-                    "deb",
-                    "rpm"
-                ]
-            },
-            "electronPackagerConfig": {
-                "packageManager": "npm"
-            },
-            "electronWinstallerConfig": {
-                "name": "projects_electron"
-            },
-            "electronInstallerDebian": {},
-            "electronInstallerRedhat": {},
-            "github_repository": {
-                "owner": "",
-                "name": ""
-            },
-            "windowsStoreConfig": {
-                "packageName": "",
-                "name": "projectselectron"
-            }
-        }
-    },
-    "dependencies": {
-        "electron-compile": "^6.4.2",
-        "electron-squirrel-startup": "^1.0.0"
-    },
-    "devDependencies": {
-        "babel-plugin-transform-async-to-generator": "^6.24.1",
-        "babel-preset-env": "^1.6.1",
-        "babel-preset-react": "^6.24.1",
-        "electron-forge": "^4.1.5",
-        "electron-prebuilt-compile": "1.7.9",
-        "eslint": "^3.19.0",
-        "eslint-config-airbnb": "^15.1.0",
-        "eslint-plugin-import": "^2.8.0",
-        "eslint-plugin-jsx-a11y": "^5.1.1",
-        "eslint-plugin-react": "^7.5.1",
-        "babel-core": "^6.17.0",
-        "babel-preset-react": "^6.16.0",
-        "meow": "^3.7.0",
-        "react": "^15.3.2",
-        "react-dom": "^15.3.2"
+  "name": "projects-electron",
+  "productName": "projects-electron",
+  "version": "1.0.0",
+  "description": "ProjectSimplify",
+  "main": "src/main.js",
+  "scripts": {
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish",
+    "lint": "eslint src --color"
+  },
+  "keywords": [],
+  "author": "root",
+  "license": "MIT",
+  "config": {
+    "forge": {
+      "make_targets": {
+        "win32": [
+          "squirrel"
+        ],
+        "darwin": [
+          "zip"
+        ],
+        "linux": [
+          "deb",
+          "rpm"
+        ]
+      },
+      "electronPackagerConfig": {
+        "packageManager": "npm"
+      },
+      "electronWinstallerConfig": {
+        "name": "projects-electron"
+      },
+      "electronInstallerDebian": {},
+      "electronInstallerRedhat": {},
+      "github_repository": {
+        "owner": "jasoryeh",
+        "name": "projects-electron"
+      },
+      "windowsStoreConfig": {
+        "packageName": "",
+        "name": "test"
+      }
     }
+  },
+  "dependencies": {
+    "electron-compile": "^6.4.2",
+    "electron-squirrel-startup": "^1.0.0"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "electron-forge": "^5.1.1",
+    "electron-prebuilt-compile": "1.8.2"
+  }
 }
